<resources>
    <string name="app_name">ParkNBark</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="register">Register</string>
    <string name="lname">Last Name</string>
    <string name="fname">First Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Login</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="bug_report">Bug Report</string>
    <string name="group_email" translatable="false">avielcohen15@gmail.com</string>
    <string name="dog_name">Dog Name</string>
    <string name="dog_breed">Dog Breed</string>
    <string name="dog_age">Dog Age</string>
    <string name="register_textview">click here to register</string>
    <string name="title_activity_map">Map</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="reset_pass_send_button">Send</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="credit">About</string>
    <string name="about_header" translatable="false">Park N Bark</string>
    <string name="about_content">Park N Bark is an app dedicated to make it easier for dog owners meet other dog owners and let their dogs play with the ease of modern technology at hand.      The app was developed with the help of mentors Hadas Chasidim, Dani Almog and Sali Weizman who served as mentors for this project. The team relied on open data source supplied by the municipality of Beer-Sheva.</string>
    <string name="about_devs">The developers are 3rd year students studying currently at the SCE College of Engineering. The idea for this app came to their minds from their own problems as being pet owners.</string>
    <string name="locations">Locations</string>
    <string name="change_pass_explanation_text">Please enter your current password, then enter the new password you wish to use and press \"Confirm\" button.</string>
    <string name="change_pass_enter_new_pass_hint">Enter the new password</string>
    <string name="change_pass_current_pass_hint">Enter your current password</string>
    <string name="change_pass_confirm_button">Confirm</string>
    <string name="change_password">Change password</string>
    <string name="contact">Contacts</string>
    <string name="rate_us_menu_bar">Rate Us!</string>
    <string name="rate_us_text">Would you like to rate this app?</string>
    <string name="rate_us_confirm_button">Rate!</string>
    <string name="country_flag">Country flag</string>
    <string name="english" translatable="false">English</string>
    <string name="russian" translatable="false">русский</string>
    <string name="title_activity_settings">Settings</string>
    <string name="map">Map</string>
    <string name="bulletin_board">Bulletin board</string>
    <string name="my_profile">My profile</string>
    <string name="hebrew" translatable="false">עברית</string>
    <string name="settings">Settings</string>
    <string name="reset_pass_explanation_text">Please enter the E-Mail of your account and press \"Send\" button.  A link will be send to your E-Mail, enter that link to set new password.</string>
    <string name="gps_not_enabled">GPS is not enabled. Turn it on?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="checkin_msg">Check in here?</string>
    <string name="checkout_msg">Checkout?</string>
    <string name="update_credit">Update credit</string>
    <string name="update_contact">Update contact</string>
    <string name="users_in_park">Users in park</string>
    <string name="error_message">An error has been occurred. \nPlease try again later.</string>
    <string name="profile_saved">Profile saved successfully!</string>
    <string name="required">*Required</string>
    <string name="upload_image">Upload image</string>
    <string name="new_note">New Note</string>
    <string name="new_note_success">Successfully added new note.</string>
    <string name="empty_field">Field cannot be empty.</string>
    <string name="illegal_email">Illegal email address.</string>
    <string name="change_password_success">Password changed successfully.</string>
    <string name="change_password_current_invalid">The current password you entered is invalid!</string>
    <string name="change_pass_same_old_new">New password cannot be the same as the current password.</string>
    <string name="register_success">Registered successfully.\\nPlease log in.</string>
    <string name="reset_pass_success">Sent! Please check your E-Mail.</string>
    <string name="watch_profile">Show profile</string>
    <string name="ban_user">Ban user</string>
    <string name="ban_user_explanation">Are you sure you want to ban the following user?</string>
    <string name="ban_reason"><u><b>Reason for a ban:</b></u></string>
    <string name="ban_user_name"><b>Name:</b></string>
    <string name="ban_user_email"><b>E-Mail:</b></string>
    <string name="ban_user_uid"><b>UID:</b></string>
    <string name="copy_success">Successfully copied.</string>
    <string name="banned_user_success">THE USER WAS BANNED!</string>
    <string name="ban_empty_string">You must describe a reason for a ban.</string>
    <string name="permit_user">Permit access</string>
    <string name="permit_user_ask">"Are you sure you want to permit access to "</string>
    <string name="permit_user_success">"Successfully permitted access "</string>
    <string name="you_banned_explanation">Your account has been banned by administration due to violation of application\'s rules of use. If you wish to appeal against the ban, contact the administration via noonethere@noserver.com e-mail.</string>
    <string name="account_details" translatable="false"><u><b>Account details:</b></u></string>
    <string name="terms_conds_head" translatable="false"><u><b>Terms and Conditions</b></u></string>
    <string name="you_banned_msg">you`ve been banned!</string>
    <string name="terms_conds">Terms N\\` Conditions</string>
    <string name="save_my_profile">save my profile</string>
    <string name="edit_my_profile">Edit my profile</string>
    <string name="profile_not_set">" hasn't set profile yet."</string>
    <string name="wrong_email_pass">Wrong email or password.</string>
    <string name="remember_me">Remember me</string>
    <string name="password_too_short">Password must contain at least 6 characters.</string>
    <string name="password_too_long">Password must contain at most 15 characters.</string>
    <string name="email_not_valid">Email is not valid.</string>
    <string name="login_in_t">Logging in…</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="input_too_long">must contain at most 15 characters</string>
    <string name="input_too_short">must contain at least 2 characters</string>
    <string name="email_verification_failed">Failed to send email verification.</string>
    <string name="email_verification_sent">Verification email sent to</string>
    <string name="email_verify_request">Please verify your email.</string>
    <string name="please_wait">Please wait.</string>
    <string name="input_too_long_30">Input must contain at most 30 characters</string>
    <string name="share_with">Share with</string>
    <string name="permit_text">Permit</string>
    <string name="cancel_text">Cancel</string>
    <string name="upload_in_progress">Upload in progress</string>
</resources>
