<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_top">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

    <group android:id="@+id/menu_middle"
        android:checkableBehavior="none">
         <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/baseline_place_24"
            android:title = "@string/locations" />

        <item
            android:id="@+id/nav_changepass"
            android:icon="@drawable/baseline_pets_24"
            android:title="@string/change_password" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_bug_report"
            android:title="@string/bug_report" />

        <item
            android:id="@+id/nav_credit"
            android:icon="@drawable/baseline_live_help_24"
            android:title="@string/credit" />

        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/baseline_star_half_24"
            android:title="Rate Us!" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/baseline_perm_phone_msg_24"
            android:title="@string/contact" />

    </group>

    <group android:id="@+id/menu_sign_out">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/logout" />
    </group>

</menu>