<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="40dp"
    android:paddingTop="60dp"
    android:paddingEnd="40dp"
    android:fitsSystemWindows="true"
    android:background="@color/colorAppBackground"
    tools:context=".emailpassword.ResetPassActivity">


    <TextView
        android:id="@+id/text_view_reset_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-20dp"
        android:padding="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:text="@string/reset_pass_explanation_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email_reset_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_send_reset_pass"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:text="@string/reset_pass_send_button"
        android:background="@drawable/rounded_btn"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:drawableEnd="@drawable/baseline_send_24"
        android:drawablePadding="10dp"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"/>

</LinearLayout>