<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAppBackground">

    <ImageView
        android:id="@+id/image_view_profile_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="180dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_default_profile_picture" />

    <RelativeLayout
        android:id="@+id/rl_dog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view_profile_picture"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/text_view_dog_name_const"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_name"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_dog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_view_dog_name_const"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_dog_breed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_dog_name"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/text_view_dog_breed_const"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_breed"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_dog_breed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_view_dog_breed_const"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_dog_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_dog_breed"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/text_view_dog_age_const"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_age"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_dog_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_view_dog_age_const"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>